--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<p>Moj serwer WWW na GitHub</p>
-<p> Drugi paragraf</p>
-<p>trzeci paragraf</p>
+<form action "">
+<input type="text">
+</form>
 
 
-<p>paragraf w gałęzi newbranch</p>
-
-<p>zmiany na galezi master</p>
-<p>galaz druga</p>  
