--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
-<form action "">
-<input type="text">
+<!DOCTYPE html>
+ <html lang="en">
+
+
+
+<form action="https://formspree.io/mat.wojkowski@gmail.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
 </form>
+
+
+</html>
