--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Document</title>
+</head>
+
+<body>
 
 
+<form action="form.php" method="post">
+    <label for="imie">Imię</label><br/>
+    <input type="text" name="imie" id="imie"><br/>
+    <label for="nazwisko">Nazwisko</label><br/>
+    <input type="text" name="nazwisko" id="nazwisko"><br/>
+    <label for="email">email</label><br/>
+    <input type="text" name="email" id="email">
+    <label for="numer-telefonu"></label><br/>
+    <input type="number" name="numer-telefonu" id="numer-telefonu">
 
-<form action="https://formspree.io/mat.wojkowski@gmail.com"
-      method="POST">
-    <input type="text" name="name">
-    <input type="email" name="_replyto">
-    <input type="submit" value="Send">
+    
+    
 </form>
 
+
+    <form action="https://formspree.io/mat.wojkowski@gmail.com" method="POST">
+        <input type="text" name="name">
+        <input type="email" name="_replyto">
+        <input type="submit" value="Send">
+    </form>
+
+</body>
 
 </html>
