dodano pole wiadomosci

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <input type="text" name="nazwisko" id="nazwisko"><br/>
     <label for="email">email</label><br/>
     <input type="text" name="email" id="email">
-    <label for="numer-telefonu"></label><br/>
+    <label form="numer-telefonu"></label><br/>
     <input type="number" name="numer-telefonu" id="numer-telefonu">
+    <textarea maxlength="1000">Wiadomosc</textarea><br/>
 
     
     
