--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 
 <form action="form.php" method="post">
+   
+   
     <label for="imie">Imię</label><br/>
     <input type="text" name="imie" id="imie"><br/>
     <label for="nazwisko">Nazwisko</label><br/>
@@ -19,6 +21,7 @@
     <label form="numer-telefonu"></label><br/>
     <input type="number" name="numer-telefonu" id="numer-telefonu">
     <textarea maxlength="1000">Wiadomosc</textarea><br/>
+    <input type="submit" value="Wyslij">
 
     
     
