druga proba poprawia nr telefonu

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <input type="text" name="nazwisko" id="nazwisko"><br/>
     <label for="email">email</label><br/>
     <input type="text" name="email" id="email">
-    <label for="numer"></label><br/>
-    <input type="number" name="numertelefonu" id="numertelefonu">
+    <label for="text"></label><br/>
+    <input type="text" name="numertelefonu" id="numertelefonu">
     <textarea maxlength="1000">Wiadomosc</textarea><br/>
     <input type="submit" value="Wyslij">
     </form>
