--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <input type="text" name="nazwisko" id="nazwisko"><br/>
     <label for="email">email</label><br/>
     <input type="text" name="email" id="email">
-    <label for="text"></label><br/>
+    <label for="text">Numertelefonu</label><br/>
     <input type="text" name="numertelefonu" id="numertelefonu">
     <textarea maxlength="1000">Wiadomosc</textarea><br/>
     <input type="submit" value="Wyslij">
