--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <input type="text" name="nazwisko" id="nazwisko"><br/>
     <label for="email">email</label><br/>
     <input type="text" name="email" id="email">
-    <label for="text">Numertelefonu</label><br/>
-    <input type="text" name="numertelefonu" id="numertelefonu">
+  <input type="number" name="quantity" min="1" max="6">
+
     <textarea maxlength="1000">Wiadomosc</textarea><br/>
     <input type="submit" value="Wyslij">
     </form>
