piata proba nr telefonu

--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
 <body>
 
 
-   
-   
 
 
-    
-    
+
+
+
 
 
 
     <form action="https://formspree.io/mat.wojkowski@gmail.com" method="POST">
         <label for="imie">Imię</label><br/>
-    <input type="text" name="imie" id="imie"><br/>
-    <label for="nazwisko">Nazwisko</label><br/>
-    <input type="text" name="nazwisko" id="nazwisko"><br/>
-    <label for="email">email</label><br/>
-    <input type="text" name="email" id="email">
-  <input type="number" name="quantity" min="1" max="6">
-
-    <textarea maxlength="1000">Wiadomosc</textarea><br/>
-    <input type="submit" value="Wyslij">
+        <input type="text" name="imie" id="imie"><br/>
+        <label for="nazwisko">Nazwisko</label><br/>
+        <input type="text" name="nazwisko" id="nazwisko"><br/>
+        <label for="email">email</label><br/>
+        <input type="text" name="email" id="email">
+        <input type="tel" name="telefon" id="telefon"><br/>
+        <input type="number" name="quantity" min="1" max="6">
+        <textarea maxlength="1000">Wiadomosc</textarea><br/>
+        <input type="submit" value="Wyslij">
     </form>
 
 </body>
