--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <label for="nazwisko">Nazwisko</label><br/>
         <input type="text" name="nazwisko" id="nazwisko"><br/>
         <label for="email">email</label><br/>
-        <input type="text" name="email" id="email">        
+        <input type="text" name="email" id="email">
+        <label for="number">Telefon</label><br/>
+        <input type="tel" name="usrtel" id="usrtel"><br/>        
         <textarea maxlength="1000">Wiadomosc</textarea><br/>
         <input type="submit" value="Wyslij">
     </form>
