dodano przesunięcie do nowego wiersza

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <div id="formularz">
 
 
-            <label>Imię</label>
-            <input name="name">
+            <label>Imię</label><br/>
+            <input name="name"><br/>
 
-            <label>Nazwisko</label>
+            <label>Nazwisko</label><br/>
             <input name="name">
 
             <label>E-mail</label>
