--- a/index.html
+++ b/index.html
@@ -1,60 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <title>Formularz</title>    
 </head>
 
 <body>
-
-
-    <form action="https://formspree.io/mat.wojkowski@gmail.com" method="POST">
-
-
-        <div id="formularz">
-
-
-            <label>Imię</label><br/>
-            <input name="name"><br/>
-
-            <label>Nazwisko</label><br/>
-            <input name="name">
-
-            <label>E-mail</label>
-            <input name="email" type="email">
-
-            <label>Numer telefonu</label>
-            <input name="telefon" type="number">
-
-            <label>Wybierz miasto</label>
-
-            <select>
-        <option>Kraków</option>
-        <option>Warszawa</option>
-        <option>Gdańsk</option>
-      </select>
-
-            <p>Płeć</p>
-
-            <input type="radio" name="Płeć" value="Kobieta" />Kobieta
-            <input type="radio" name="Płeć" value="Mężczyzna" />Mężczyzna
-
-            <p>Wyrażasz zgodę na przetwarzanie danych osobowych?</p>
-
-            <input type="checkbox" name="zgoda">Tak
-
-            <p>Wiadomosc</p>
-            <textarea name="komentarz" cols="50" rows="10"></textarea>
-
-            <p>Wyślij</p>
-            <input type="submit" value="wyślij formularz">
-
-        </div>
-
-
-    </form>
-
+   
+   <form action="https://formspree.io/mat.wojkowski@gmail.com" method="POST"></form>
+   
+   <label for="imie">Imię</label><br/>
+   <input type="text" name="imie" id="imie"><br/>
+    
 </body>
-
 </html>
