--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Formularz</title>    
+    <title>Formularz</title>
 </head>
 
 <body>
-   
-   <form action="https://formspree.io/mat.wojkowski@gmail.com" method="POST"></form>
-   
-   <label for="imie">Imię</label><br/>
-   <input type="text" name="imie" id="imie"><br/>
+
     
+    <label for="imie">Imię</label><br/>
+    <input type="text" name="imie" id="imie"><br/>
+    <label for="nazwisko">Nazwisko</label><br/>
+    <input type="text" name="nazwisko" id="nazwisko"><br/>
+    <label for="email">email</label><br/>
+    <input type="text" name="email" id="email"><br/>
+    <label for="miasto">Wybierz miasto zamieszkania</label><br/>
+    <select name="wybierz">
+        <option>Krakow</option>
+        <option>Warszawa</option>
+        <option>Gdańsk</option>
+    </select><br/>
+    <label for="plec">Płeć</label><br/>
+    <input type="radio" name="Płeć" value="Kobieta" />Kobieta<br/>
+    <input type="radio" name="Płeć" value="Mężczyzna" />Mężczyzna<br/>
+    <label for="zgoda">Czy wyrażasz zgodę na przetwarzanie danych osobowych?</label><br/>
+    <input type="checkbox" name="zgoda" value="tak" />Tak<br/>
+    <label for="wiadomosc">Zostaw wiadomość</label><br/>
+    <textarea name="wiadomosc" cols="50" rows="10">Wpisz komentarz</textarea><br/>
+    <input type="submit" name="wyslij_formularz" value="Wyślij formularz" /><br/>
+
+<form action="https://formspree.io/mat.wojkowski@gmail.com"method="POST"></form>
+
 </body>
+
 </html>
