--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <label for="phone">Telefon:</label>
     <input type="tel" name="phone" id="phone">
     
-    <!-- MIASTO --->
+    <!-- MIASTO -->
 
     <br>
     <label for="city">Wybierz miasto:</label>
